@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2008-01-06  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/loaders/cdx/cdx.cc: fixed triple bonds import.
+	* plugins/loaders/cdxml/cdxml.cc: ditto.
+
 2008-01-03  Jean Bréfort  <jean.brefort@normalesup.org>
 	* plugins/loaders/cdx/cdx.cc: load groups.
 	* plugins/loaders/cdxml/cdxml.cc: ditto.
